# pluginmanager

./: CMakeLists.txt  LICENSE
includes/: pluginloader.h
src/: list.h  pluginloader.c
